--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
     "gatsby-plugin-gatsby-cloud": "2.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "10.2.5",
+    "gatsby-plugin-postcss": "4.5.0",
+    "postcss": "8.2.15",
+    "tailwindcss": "2.1.2"
   }
 }
